navbar,footer update

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: .25rem 5rem;
     background-color: rgb(255, 255, 255);
-    width: 1263px;
+    width: 100vw;
   }
   
   .structuralBC__navbar-links {
