--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -86,7 +86,7 @@
 }
 
 .structuralBC__header-image img {
-    width: 600px; /* Adjust the width value as needed */
+    width: 45vw; /* Adjust the width value as needed */
     height: auto; 
 }
 
