--- a/src/pages/contactpage/contactpage.css
+++ b/src/pages/contactpage/contactpage.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     background-image: url("../../assets/vancouver.jpg");
     background-size: cover;
     background-position: center;
@@ -17,8 +17,8 @@
     padding: 10px;
     border-radius: 10px;
     width: 100%;
-    max-width: 500px;
-   
+    max-width: 40vw;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
