--- a/src/pages/loginredirect/loginre.css
+++ b/src/pages/loginredirect/loginre.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 85vh;
     background-image: url("../../assets/login.jpg");
     background-size: cover;
     background-position: center;
@@ -14,7 +14,8 @@
     border-radius: 10px;
  
     width: 100%;
-    max-width: 400px;
+    max-width: 40vw;
+
     display: flex;
     flex-direction: column;
     align-items: left;
