--- a/src/components/signin/signin.css
+++ b/src/components/signin/signin.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 80vh;
     background-image: url("../../assets/sunset.jpg");
     background-size: cover;
     background-position: center;
@@ -14,11 +14,12 @@
     padding: 10px;
     border-radius: 10px;
     width: 100%;
-    max-width: 500px;
+    max-width: 38vw;
     display: flex;
     flex-direction: column;
     align-items: left;
     text-align: center;
+     height: 62vh; 
 }
 
 .signin-container h1 {
