--- a/src/pages/contactpage/contactpage.css
+++ b/src/pages/contactpage/contactpage.css
@@ -14,7 +14,7 @@
   
   .structuralBC__contact-content {
     background-color: rgba(255, 255, 255,1);
-    padding: 10px;
+    padding: 1vh;
     border-radius: 10px;
     width: 100%;
     max-width: 40vw;
@@ -48,18 +48,18 @@
     border: 1px solid #e9ecef;
     padding: 0.9em 1em;
     outline: none;
-    width: 375px;
+    width: 30vw;
     margin-bottom: 1em;
    /* Apply the same font-family */
   }
   
   .email,
   .name {
-    height: 40px;
+    height: 5vh;
   }
   
   .message {
-    height: 275px;
+    height: 30vh;
     /* You already have the font-family property applied above */
   }
 
@@ -72,14 +72,14 @@
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 4vh;
     border: none;
     outline: none;
     cursor: pointer;
     border-radius: 5px;
-    margin-top: 1rem;
+    margin-top: .5vh;
     margin-bottom: 2rem;
-    width: 375px;
+    width: 30vw;
 
  }
 
