--- a/src/pages/contactpage/contactpage.css
+++ b/src/pages/contactpage/contactpage.css
@@ -25,6 +25,8 @@
     text-align: center;
   }
 
+  
+
   .structuralBC__contact-content h1 {
     background: var(--gradient-text);
     background-clip: text;
@@ -78,7 +80,7 @@
     cursor: pointer;
     border-radius: 5px;
     margin-top: .5vh;
-    margin-bottom: 2rem;
+    margin-bottom: 1vh;
     width: 30vw;
 
  }
@@ -89,4 +91,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
  }  
