--- a/src/components/signin/signin.css
+++ b/src/components/signin/signin.css
@@ -14,7 +14,7 @@
     padding: 10px;
     border-radius: 10px;
     width: 100%;
-    max-width: 39vw;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     align-items: left;
