--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -21,6 +21,7 @@
   border-radius: 10px;
   /* box-shadow: 1px 3px 10px #e9ecef; */
   background-color: white;
+  height: 525px;
 
 
 }
@@ -38,6 +39,7 @@
   max-width: 320px;
   width: 100vw;
   margin: 2em auto;
+  height: 325px;
 }
 
 #form >  input, .bt{
@@ -62,7 +64,7 @@
   outline: none;
   cursor: pointer;
   border-radius: 5px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .flex{
