--- a/src/pages/calculatorspage/earthquake.css
+++ b/src/pages/calculatorspage/earthquake.css
@@ -69,7 +69,7 @@
 
  .WhiteSheet {
   background-color: white;
-  width: 100%; /* Adjust the width as needed */
+  width: 1000px; /* Adjust the width as needed */
   display: flex;
   flex-direction: column;; /* Adjust the height as needed */
   margin-top: 20px; /* Adjust the top margin as needed for spacing */
