--- a/src/pages/questions/questions.css
+++ b/src/pages/questions/questions.css
@@ -100,7 +100,7 @@ margin-left: 5rem;
 .save-pdf-button{
     padding: 0.5rem 1rem;
     height: 35px;
-    margin-left: 45vw;  
+    margin-left: 500px;  
     position: absolute;
     top: 332px; 
   }
