--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -172,3 +172,16 @@
     display: initial;
   }
 }
+
+
+.success-message2 h2 {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 49px;
+  letter-spacing: -0.02em;
+  margin-top: 1rem;
+
+
+
+ }
